probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: rajaeamal301024/customer:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/customers/ping
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/customers/ping
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /api/customers/ping
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
