deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: rajaeamal301024/customer:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  namespace: garage
spec:
  selector:
    app: customer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vehicle
  template:
    metadata:
      labels:
        app: vehicle
    spec:
      containers:
      - name: vehicle
        image: rajaeamal301024/vehicle:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle
  namespace: garage
spec:
  selector:
    app: vehicle
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: workshop
        image: rajaeamal301024/workshop:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: workshop
  namespace: garage
spec:
  selector:
    app: workshop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-gateway
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-gateway
  template:
    metadata:
      labels:
        app: express-gateway
    spec:
      containers:
      - name: express-gateway
        image: rajaeamal301024/gateway:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: express-gateway
  namespace: garage
spec:
  selector:
    app: express-gateway
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: garage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: rajaeamal301024/webapp:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: garage
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
